securing tmdb api key Natively using c++

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,17 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+//        externalNativeBuild {
+//            cmake {
+//                cppFlags ""
+//            }
+//        }
+    }
+
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+        }
     }
 
     buildTypes {
